logs/dag_id=executing_sql_pipeline/run_id=manual__2025-01-29T000020.939035+0000/task_id=insert_values_2/attempt=1.log
[2025-01-29T00:00:22.497+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2025-01-29T00:00:22.509+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: executing_sql_pipeline.insert_values_2 manual__2025-01-29T00:00:20.939035+00:00 [queued]>
[2025-01-29T00:00:22.514+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: executing_sql_pipeline.insert_values_2 manual__2025-01-29T00:00:20.939035+00:00 [queued]>
[2025-01-29T00:00:22.515+0000] {taskinstance.py:2866} INFO - Starting attempt 1 of 1
[2025-01-29T00:00:22.526+0000] {taskinstance.py:2889} INFO - Executing <Task(PostgresOperator): insert_values_2> on 2025-01-29 00:00:20.939035+00:00
[2025-01-29T00:00:22.532+0000] {standard_task_runner.py:72} INFO - Started process 1308 to run task
[2025-01-29T00:00:22.534+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'executing_sql_pipeline', 'insert_values_2', 'manual__2025-01-29T00:00:20.939035+00:00', '--job-id', '23', '--raw', '--subdir', 'DAGS_FOLDER/executing_sql_pipeline.py', '--cfg-path', '/tmp/tmp2kceolm4']
[2025-01-29T00:00:22.535+0000] {standard_task_runner.py:105} INFO - Job 23: Subtask insert_values_2
[2025-01-29T00:00:22.568+0000] {task_command.py:467} INFO - Running <TaskInstance: executing_sql_pipeline.insert_values_2 manual__2025-01-29T00:00:20.939035+00:00 [running]> on host 6b2a71fc0c6d
[2025-01-29T00:00:22.628+0000] {taskinstance.py:3132} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='executing_sql_pipeline' AIRFLOW_CTX_TASK_ID='insert_values_2' AIRFLOW_CTX_EXECUTION_DATE='2025-01-29T00:00:20.939035+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-01-29T00:00:20.939035+00:00'
[2025-01-29T00:00:22.629+0000] {taskinstance.py:731} INFO - ::endgroup::
[2025-01-29T00:00:22.638+0000] {sql.py:278} INFO - Executing: 
            INSERT INTO users (id, name, age) VALUES
                ('Harry', 49),
                ('Nancy', 52),
                ('Elvis', 26),
                ('Mia', 20);
        
[2025-01-29T00:00:22.645+0000] {base.py:84} INFO - Retrieving connection 'postgres_conn'
[2025-01-29T00:00:22.652+0000] {base.py:84} INFO - Retrieving connection 'postgres_conn'
[2025-01-29T00:00:22.656+0000] {sql.py:553} INFO - Running statement: 
            INSERT INTO users (id, name, age) VALUES
                ('Harry', 49),
                ('Nancy', 52),
                ('Elvis', 26),
                ('Mia', 20);
        , parameters: None
[2025-01-29T00:00:22.658+0000] {taskinstance.py:3311} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 422, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/operators/sql.py", line 284, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 498, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 558, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
LINE 2:             INSERT INTO users (id, name, age) VALUES
                                                 ^

[2025-01-29T00:00:22.665+0000] {taskinstance.py:1225} INFO - Marking task as FAILED. dag_id=executing_sql_pipeline, task_id=insert_values_2, run_id=manual__2025-01-29T00:00:20.939035+00:00, execution_date=20250129T000020, start_date=20250129T000022, end_date=20250129T000022
[2025-01-29T00:00:22.676+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2025-01-29T00:00:22.677+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 23 for task insert_values_2 (INSERT has more target columns than expressions
LINE 2:             INSERT INTO users (id, name, age) VALUES
                                                 ^
; 1308)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/utils/cli.py", line 116, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 3005, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 3159, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 3183, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 422, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/operators/sql.py", line 284, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 498, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/common/sql/hooks/sql.py", line 558, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
LINE 2:             INSERT INTO users (id, name, age) VALUES
                                                 ^

[2025-01-29T00:00:22.707+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2025-01-29T00:00:22.715+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
